test/sematest/invalid/sysoutprintln4.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    System.out.out.println(1);
  }
}
